frontend/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DoWhile

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> function
Rule 3     type -> Int
Rule 4     function -> type Identifier LParen RParen LBrace block RBrace
Rule 5     block -> block block_item
Rule 6     block -> empty
Rule 7     block_item -> statement
Rule 8     block_item -> declaration Semi
Rule 9     statement -> statement_matched
Rule 10    statement -> statement_unmatched
Rule 11    statement_matched -> If LParen expression RParen statement_matched Else statement_matched
Rule 12    statement_unmatched -> If LParen expression RParen statement_matched Else statement_unmatched
Rule 13    statement_unmatched -> If LParen expression RParen statement
Rule 14    statement_matched -> While LParen expression RParen statement_matched
Rule 15    statement_unmatched -> While LParen expression RParen statement_unmatched
Rule 16    statement_matched -> Do statement_matched While LParen expression RParen Semi
Rule 17    statement_unmatched -> Do statement_unmatched While LParen expression RParen Semi
Rule 18    statement_matched -> For LParen expression Semi expression Semi expression RParen statement_matched
Rule 19    statement_matched -> For LParen declaration Semi expression Semi expression RParen statement_matched
Rule 20    statement_unmatched -> For LParen expression Semi expression Semi expression RParen statement_unmatched
Rule 21    statement_unmatched -> For LParen declaration Semi expression Semi expression RParen statement_unmatched
Rule 22    statement_matched -> For LParen Semi Semi RParen statement_matched
Rule 23    statement_unmatched -> For LParen Semi Semi RParen statement_unmatched
Rule 24    statement_matched -> Return expression Semi
Rule 25    statement_matched -> opt_expression Semi
Rule 26    statement_matched -> LBrace block RBrace
Rule 27    statement_matched -> Break Semi
Rule 28    statement_matched -> Continue Semi
Rule 29    statement_matched -> For LParen declaration Semi expression Semi RParen statement_matched
Rule 30    statement_unmatched -> For LParen declaration Semi expression Semi RParen statement_unmatched
Rule 31    opt_expression -> expression
Rule 32    opt_expression -> empty
Rule 33    declaration -> type Identifier
Rule 34    declaration -> type Identifier Assign expression
Rule 35    expression -> assignment
Rule 36    assignment -> conditional
Rule 37    conditional -> logical_or
Rule 38    logical_or -> logical_and
Rule 39    logical_and -> bit_or
Rule 40    bit_or -> xor
Rule 41    xor -> bit_and
Rule 42    bit_and -> equality
Rule 43    equality -> relational
Rule 44    relational -> additive
Rule 45    additive -> multiplicative
Rule 46    multiplicative -> unary
Rule 47    unary -> postfix
Rule 48    postfix -> primary
Rule 49    unary -> Minus unary
Rule 50    unary -> BitNot unary
Rule 51    unary -> Not unary
Rule 52    assignment -> Identifier Assign expression
Rule 53    logical_or -> logical_or Or logical_and
Rule 54    logical_and -> logical_and And bit_or
Rule 55    bit_or -> bit_or BitOr xor
Rule 56    xor -> xor Xor bit_and
Rule 57    bit_and -> bit_and BitAnd equality
Rule 58    equality -> equality NotEqual relational
Rule 59    equality -> equality Equal relational
Rule 60    relational -> relational Less additive
Rule 61    relational -> relational Greater additive
Rule 62    relational -> relational LessEqual additive
Rule 63    relational -> relational GreaterEqual additive
Rule 64    additive -> additive Plus multiplicative
Rule 65    additive -> additive Minus multiplicative
Rule 66    multiplicative -> multiplicative Mul unary
Rule 67    multiplicative -> multiplicative Div unary
Rule 68    multiplicative -> multiplicative Mod unary
Rule 69    conditional -> logical_or Question expression Colon conditional
Rule 70    primary -> Integer
Rule 71    primary -> Identifier
Rule 72    primary -> LParen expression RParen

Terminals, with rules where they appear

And                  : 54
Assign               : 34 52
BitAnd               : 57
BitNot               : 50
BitOr                : 55
Break                : 27
Colon                : 69
Continue             : 28
Div                  : 67
Do                   : 16 17
DoWhile              : 
Else                 : 11 12
Equal                : 59
For                  : 18 19 20 21 22 23 29 30
Greater              : 61
GreaterEqual         : 63
Identifier           : 4 33 34 52 71
If                   : 11 12 13
Int                  : 3
Integer              : 70
LBrace               : 4 26
LParen               : 4 11 12 13 14 15 16 17 18 19 20 21 22 23 29 30 72
Less                 : 60
LessEqual            : 62
Minus                : 49 65
Mod                  : 68
Mul                  : 66
Not                  : 51
NotEqual             : 58
Or                   : 53
Plus                 : 64
Question             : 69
RBrace               : 4 26
RParen               : 4 11 12 13 14 15 16 17 18 19 20 21 22 23 29 30 72
Return               : 24
Semi                 : 8 16 17 18 18 19 19 20 20 21 21 22 22 23 23 24 25 27 28 29 29 30 30
While                : 14 15 16 17
Xor                  : 56
error                : 

Nonterminals, with rules where they appear

additive             : 44 60 61 62 63 64 65
assignment           : 35
bit_and              : 41 56 57
bit_or               : 39 54 55
block                : 4 5 26
block_item           : 5
conditional          : 36 69
declaration          : 8 19 21 29 30
empty                : 6 32
equality             : 42 57 58 59
expression           : 11 12 13 14 15 16 17 18 18 18 19 19 20 20 20 21 21 24 29 30 31 34 52 69 72
function             : 2
logical_and          : 38 53 54
logical_or           : 37 53 69
multiplicative       : 45 64 65 66 67 68
opt_expression       : 25
postfix              : 47
primary              : 48
program              : 0
relational           : 43 58 59 60 61 62 63
statement            : 7 13
statement_matched    : 9 11 11 12 14 16 18 19 22 29
statement_unmatched  : 10 12 15 17 20 21 23 30
type                 : 4 33 34
unary                : 46 49 50 51 66 67 68
xor                  : 40 55 56

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . function
    (4) function -> . type Identifier LParen RParen LBrace block RBrace
    (3) type -> . Int

    Int             shift and go to state 4

    program                        shift and go to state 1
    function                       shift and go to state 2
    type                           shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (2) program -> function .

    $end            reduce using rule 2 (program -> function .)


state 3

    (4) function -> type . Identifier LParen RParen LBrace block RBrace

    Identifier      shift and go to state 5


state 4

    (3) type -> Int .

    Identifier      reduce using rule 3 (type -> Int .)


state 5

    (4) function -> type Identifier . LParen RParen LBrace block RBrace

    LParen          shift and go to state 6


state 6

    (4) function -> type Identifier LParen . RParen LBrace block RBrace

    RParen          shift and go to state 7


state 7

    (4) function -> type Identifier LParen RParen . LBrace block RBrace

    LBrace          shift and go to state 8


state 8

    (4) function -> type Identifier LParen RParen LBrace . block RBrace
    (5) block -> . block block_item
    (6) block -> . empty
    (1) empty -> .

    RBrace          reduce using rule 1 (empty -> .)
    If              reduce using rule 1 (empty -> .)
    While           reduce using rule 1 (empty -> .)
    Do              reduce using rule 1 (empty -> .)
    For             reduce using rule 1 (empty -> .)
    Return          reduce using rule 1 (empty -> .)
    LBrace          reduce using rule 1 (empty -> .)
    Break           reduce using rule 1 (empty -> .)
    Continue        reduce using rule 1 (empty -> .)
    Int             reduce using rule 1 (empty -> .)
    Identifier      reduce using rule 1 (empty -> .)
    Minus           reduce using rule 1 (empty -> .)
    BitNot          reduce using rule 1 (empty -> .)
    Not             reduce using rule 1 (empty -> .)
    Integer         reduce using rule 1 (empty -> .)
    LParen          reduce using rule 1 (empty -> .)
    Semi            reduce using rule 1 (empty -> .)

    block                          shift and go to state 9
    empty                          shift and go to state 10

state 9

    (4) function -> type Identifier LParen RParen LBrace block . RBrace
    (5) block -> block . block_item
    (7) block_item -> . statement
    (8) block_item -> . declaration Semi
    (9) statement -> . statement_matched
    (10) statement -> . statement_unmatched
    (33) declaration -> . type Identifier
    (34) declaration -> . type Identifier Assign expression
    (11) statement_matched -> . If LParen expression RParen statement_matched Else statement_matched
    (14) statement_matched -> . While LParen expression RParen statement_matched
    (16) statement_matched -> . Do statement_matched While LParen expression RParen Semi
    (18) statement_matched -> . For LParen expression Semi expression Semi expression RParen statement_matched
    (19) statement_matched -> . For LParen declaration Semi expression Semi expression RParen statement_matched
    (22) statement_matched -> . For LParen Semi Semi RParen statement_matched
    (24) statement_matched -> . Return expression Semi
    (25) statement_matched -> . opt_expression Semi
    (26) statement_matched -> . LBrace block RBrace
    (27) statement_matched -> . Break Semi
    (28) statement_matched -> . Continue Semi
    (29) statement_matched -> . For LParen declaration Semi expression Semi RParen statement_matched
    (12) statement_unmatched -> . If LParen expression RParen statement_matched Else statement_unmatched
    (13) statement_unmatched -> . If LParen expression RParen statement
    (15) statement_unmatched -> . While LParen expression RParen statement_unmatched
    (17) statement_unmatched -> . Do statement_unmatched While LParen expression RParen Semi
    (20) statement_unmatched -> . For LParen expression Semi expression Semi expression RParen statement_unmatched
    (21) statement_unmatched -> . For LParen declaration Semi expression Semi expression RParen statement_unmatched
    (23) statement_unmatched -> . For LParen Semi Semi RParen statement_unmatched
    (30) statement_unmatched -> . For LParen declaration Semi expression Semi RParen statement_unmatched
    (3) type -> . Int
    (31) opt_expression -> . expression
    (32) opt_expression -> . empty
    (35) expression -> . assignment
    (1) empty -> .
    (36) assignment -> . conditional
    (52) assignment -> . Identifier Assign expression
    (37) conditional -> . logical_or
    (69) conditional -> . logical_or Question expression Colon conditional
    (38) logical_or -> . logical_and
    (53) logical_or -> . logical_or Or logical_and
    (39) logical_and -> . bit_or
    (54) logical_and -> . logical_and And bit_or
    (40) bit_or -> . xor
    (55) bit_or -> . bit_or BitOr xor
    (41) xor -> . bit_and
    (56) xor -> . xor Xor bit_and
    (42) bit_and -> . equality
    (57) bit_and -> . bit_and BitAnd equality
    (43) equality -> . relational
    (58) equality -> . equality NotEqual relational
    (59) equality -> . equality Equal relational
    (44) relational -> . additive
    (60) relational -> . relational Less additive
    (61) relational -> . relational Greater additive
    (62) relational -> . relational LessEqual additive
    (63) relational -> . relational GreaterEqual additive
    (45) additive -> . multiplicative
    (64) additive -> . additive Plus multiplicative
    (65) additive -> . additive Minus multiplicative
    (46) multiplicative -> . unary
    (66) multiplicative -> . multiplicative Mul unary
    (67) multiplicative -> . multiplicative Div unary
    (68) multiplicative -> . multiplicative Mod unary
    (47) unary -> . postfix
    (49) unary -> . Minus unary
    (50) unary -> . BitNot unary
    (51) unary -> . Not unary
    (48) postfix -> . primary
    (70) primary -> . Integer
    (71) primary -> . Identifier
    (72) primary -> . LParen expression RParen

    RBrace          shift and go to state 15
    If              shift and go to state 22
    While           shift and go to state 23
    Do              shift and go to state 24
    For             shift and go to state 25
    Return          shift and go to state 26
    LBrace          shift and go to state 14
    Break           shift and go to state 28
    Continue        shift and go to state 29
    Int             shift and go to state 4
    Semi            reduce using rule 1 (empty -> .)
    Identifier      shift and go to state 12
    Minus           shift and go to state 42
    BitNot          shift and go to state 45
    Not             shift and go to state 46
    Integer         shift and go to state 48
    LParen          shift and go to state 13

    type                           shift and go to state 11
    block_item                     shift and go to state 16
    statement                      shift and go to state 17
    declaration                    shift and go to state 18
    statement_matched              shift and go to state 19
    statement_unmatched            shift and go to state 20
    expression                     shift and go to state 21
    opt_expression                 shift and go to state 27
    empty                          shift and go to state 30
    assignment                     shift and go to state 31
    conditional                    shift and go to state 32
    logical_or                     shift and go to state 33
    logical_and                    shift and go to state 34
    bit_or                         shift and go to state 35
    xor                            shift and go to state 36
    bit_and                        shift and go to state 37
    equality                       shift and go to state 38
    relational                     shift and go to state 39
    additive                       shift and go to state 40
    multiplicative                 shift and go to state 41
    unary                          shift and go to state 43
    postfix                        shift and go to state 44
    primary                        shift and go to state 47

state 10

    (6) block -> empty .

    RBrace          reduce using rule 6 (block -> empty .)
    If              reduce using rule 6 (block -> empty .)
    While           reduce using rule 6 (block -> empty .)
    Do              reduce using rule 6 (block -> empty .)
    For             reduce using rule 6 (block -> empty .)
    Return          reduce using rule 6 (block -> empty .)
    LBrace          reduce using rule 6 (block -> empty .)
    Break           reduce using rule 6 (block -> empty .)
    Continue        reduce using rule 6 (block -> empty .)
    Int             reduce using rule 6 (block -> empty .)
    Identifier      reduce using rule 6 (block -> empty .)
    Minus           reduce using rule 6 (block -> empty .)
    BitNot          reduce using rule 6 (block -> empty .)
    Not             reduce using rule 6 (block -> empty .)
    Integer         reduce using rule 6 (block -> empty .)
    LParen          reduce using rule 6 (block -> empty .)
    Semi            reduce using rule 6 (block -> empty .)


state 11

    (33) declaration -> type . Identifier
    (34) declaration -> type . Identifier Assign expression

    Identifier      shift and go to state 49


state 12

    (52) assignment -> Identifier . Assign expression
    (71) primary -> Identifier .

    Assign          shift and go to state 50
    Mul             reduce using rule 71 (primary -> Identifier .)
    Div             reduce using rule 71 (primary -> Identifier .)
    Mod             reduce using rule 71 (primary -> Identifier .)
    Plus            reduce using rule 71 (primary -> Identifier .)
    Minus           reduce using rule 71 (primary -> Identifier .)
    Less            reduce using rule 71 (primary -> Identifier .)
    Greater         reduce using rule 71 (primary -> Identifier .)
    LessEqual       reduce using rule 71 (primary -> Identifier .)
    GreaterEqual    reduce using rule 71 (primary -> Identifier .)
    NotEqual        reduce using rule 71 (primary -> Identifier .)
    Equal           reduce using rule 71 (primary -> Identifier .)
    BitAnd          reduce using rule 71 (primary -> Identifier .)
    Xor             reduce using rule 71 (primary -> Identifier .)
    BitOr           reduce using rule 71 (primary -> Identifier .)
    And             reduce using rule 71 (primary -> Identifier .)
    Question        reduce using rule 71 (primary -> Identifier .)
    Or              reduce using rule 71 (primary -> Identifier .)
    Semi            reduce using rule 71 (primary -> Identifier .)
    RParen          reduce using rule 71 (primary -> Identifier .)
    Colon           reduce using rule 71 (primary -> Identifier .)


state 13

    (72) primary -> LParen . expression RParen
    (35) expression -> . assignment
    (36) assignment -> . conditional
    (52) assignment -> . Identifier Assign expression
    (37) conditional -> . logical_or
    (69) conditional -> . logical_or Question expression Colon conditional
    (38) logical_or -> . logical_and
    (53) logical_or -> . logical_or Or logical_and
    (39) logical_and -> . bit_or
    (54) logical_and -> . logical_and And bit_or
    (40) bit_or -> . xor
    (55) bit_or -> . bit_or BitOr xor
    (41) xor -> . bit_and
    (56) xor -> . xor Xor bit_and
    (42) bit_and -> . equality
    (57) bit_and -> . bit_and BitAnd equality
    (43) equality -> . relational
    (58) equality -> . equality NotEqual relational
    (59) equality -> . equality Equal relational
    (44) relational -> . additive
    (60) relational -> . relational Less additive
    (61) relational -> . relational Greater additive
    (62) relational -> . relational LessEqual additive
    (63) relational -> . relational GreaterEqual additive
    (45) additive -> . multiplicative
    (64) additive -> . additive Plus multiplicative
    (65) additive -> . additive Minus multiplicative
    (46) multiplicative -> . unary
    (66) multiplicative -> . multiplicative Mul unary
    (67) multiplicative -> . multiplicative Div unary
    (68) multiplicative -> . multiplicative Mod unary
    (47) unary -> . postfix
    (49) unary -> . Minus unary
    (50) unary -> . BitNot unary
    (51) unary -> . Not unary
    (48) postfix -> . primary
    (70) primary -> . Integer
    (71) primary -> . Identifier
    (72) primary -> . LParen expression RParen

    Identifier      shift and go to state 12
    Minus           shift and go to state 42
    BitNot          shift and go to state 45
    Not             shift and go to state 46
    Integer         shift and go to state 48
    LParen          shift and go to state 13

    expression                     shift and go to state 51
    assignment                     shift and go to state 31
    conditional                    shift and go to state 32
    logical_or                     shift and go to state 33
    logical_and                    shift and go to state 34
    bit_or                         shift and go to state 35
    xor                            shift and go to state 36
    bit_and                        shift and go to state 37
    equality                       shift and go to state 38
    relational                     shift and go to state 39
    additive                       shift and go to state 40
    multiplicative                 shift and go to state 41
    unary                          shift and go to state 43
    postfix                        shift and go to state 44
    primary                        shift and go to state 47

state 14

    (26) statement_matched -> LBrace . block RBrace
    (5) block -> . block block_item
    (6) block -> . empty
    (1) empty -> .

    RBrace          reduce using rule 1 (empty -> .)
    If              reduce using rule 1 (empty -> .)
    While           reduce using rule 1 (empty -> .)
    Do              reduce using rule 1 (empty -> .)
    For             reduce using rule 1 (empty -> .)
    Return          reduce using rule 1 (empty -> .)
    LBrace          reduce using rule 1 (empty -> .)
    Break           reduce using rule 1 (empty -> .)
    Continue        reduce using rule 1 (empty -> .)
    Int             reduce using rule 1 (empty -> .)
    Identifier      reduce using rule 1 (empty -> .)
    Minus           reduce using rule 1 (empty -> .)
    BitNot          reduce using rule 1 (empty -> .)
    Not             reduce using rule 1 (empty -> .)
    Integer         reduce using rule 1 (empty -> .)
    LParen          reduce using rule 1 (empty -> .)
    Semi            reduce using rule 1 (empty -> .)

    block                          shift and go to state 52
    empty                          shift and go to state 10

state 15

    (4) function -> type Identifier LParen RParen LBrace block RBrace .

    $end            reduce using rule 4 (function -> type Identifier LParen RParen LBrace block RBrace .)


state 16

    (5) block -> block block_item .

    RBrace          reduce using rule 5 (block -> block block_item .)
    If              reduce using rule 5 (block -> block block_item .)
    While           reduce using rule 5 (block -> block block_item .)
    Do              reduce using rule 5 (block -> block block_item .)
    For             reduce using rule 5 (block -> block block_item .)
    Return          reduce using rule 5 (block -> block block_item .)
    LBrace          reduce using rule 5 (block -> block block_item .)
    Break           reduce using rule 5 (block -> block block_item .)
    Continue        reduce using rule 5 (block -> block block_item .)
    Int             reduce using rule 5 (block -> block block_item .)
    Identifier      reduce using rule 5 (block -> block block_item .)
    Minus           reduce using rule 5 (block -> block block_item .)
    BitNot          reduce using rule 5 (block -> block block_item .)
    Not             reduce using rule 5 (block -> block block_item .)
    Integer         reduce using rule 5 (block -> block block_item .)
    LParen          reduce using rule 5 (block -> block block_item .)
    Semi            reduce using rule 5 (block -> block block_item .)


state 17

    (7) block_item -> statement .

    RBrace          reduce using rule 7 (block_item -> statement .)
    If              reduce using rule 7 (block_item -> statement .)
    While           reduce using rule 7 (block_item -> statement .)
    Do              reduce using rule 7 (block_item -> statement .)
    For             reduce using rule 7 (block_item -> statement .)
    Return          reduce using rule 7 (block_item -> statement .)
    LBrace          reduce using rule 7 (block_item -> statement .)
    Break           reduce using rule 7 (block_item -> statement .)
    Continue        reduce using rule 7 (block_item -> statement .)
    Int             reduce using rule 7 (block_item -> statement .)
    Identifier      reduce using rule 7 (block_item -> statement .)
    Minus           reduce using rule 7 (block_item -> statement .)
    BitNot          reduce using rule 7 (block_item -> statement .)
    Not             reduce using rule 7 (block_item -> statement .)
    Integer         reduce using rule 7 (block_item -> statement .)
    LParen          reduce using rule 7 (block_item -> statement .)
    Semi            reduce using rule 7 (block_item -> statement .)


state 18

    (8) block_item -> declaration . Semi

    Semi            shift and go to state 53


state 19

    (9) statement -> statement_matched .

    RBrace          reduce using rule 9 (statement -> statement_matched .)
    If              reduce using rule 9 (statement -> statement_matched .)
    While           reduce using rule 9 (statement -> statement_matched .)
    Do              reduce using rule 9 (statement -> statement_matched .)
    For             reduce using rule 9 (statement -> statement_matched .)
    Return          reduce using rule 9 (statement -> statement_matched .)
    LBrace          reduce using rule 9 (statement -> statement_matched .)
    Break           reduce using rule 9 (statement -> statement_matched .)
    Continue        reduce using rule 9 (statement -> statement_matched .)
    Int             reduce using rule 9 (statement -> statement_matched .)
    Identifier      reduce using rule 9 (statement -> statement_matched .)
    Minus           reduce using rule 9 (statement -> statement_matched .)
    BitNot          reduce using rule 9 (statement -> statement_matched .)
    Not             reduce using rule 9 (statement -> statement_matched .)
    Integer         reduce using rule 9 (statement -> statement_matched .)
    LParen          reduce using rule 9 (statement -> statement_matched .)
    Semi            reduce using rule 9 (statement -> statement_matched .)


state 20

    (10) statement -> statement_unmatched .

    RBrace          reduce using rule 10 (statement -> statement_unmatched .)
    If              reduce using rule 10 (statement -> statement_unmatched .)
    While           reduce using rule 10 (statement -> statement_unmatched .)
    Do              reduce using rule 10 (statement -> statement_unmatched .)
    For             reduce using rule 10 (statement -> statement_unmatched .)
    Return          reduce using rule 10 (statement -> statement_unmatched .)
    LBrace          reduce using rule 10 (statement -> statement_unmatched .)
    Break           reduce using rule 10 (statement -> statement_unmatched .)
    Continue        reduce using rule 10 (statement -> statement_unmatched .)
    Int             reduce using rule 10 (statement -> statement_unmatched .)
    Identifier      reduce using rule 10 (statement -> statement_unmatched .)
    Minus           reduce using rule 10 (statement -> statement_unmatched .)
    BitNot          reduce using rule 10 (statement -> statement_unmatched .)
    Not             reduce using rule 10 (statement -> statement_unmatched .)
    Integer         reduce using rule 10 (statement -> statement_unmatched .)
    LParen          reduce using rule 10 (statement -> statement_unmatched .)
    Semi            reduce using rule 10 (statement -> statement_unmatched .)


state 21

    (31) opt_expression -> expression .

    Semi            reduce using rule 31 (opt_expression -> expression .)


state 22

    (11) statement_matched -> If . LParen expression RParen statement_matched Else statement_matched
    (12) statement_unmatched -> If . LParen expression RParen statement_matched Else statement_unmatched
    (13) statement_unmatched -> If . LParen expression RParen statement

    LParen          shift and go to state 54


state 23

    (14) statement_matched -> While . LParen expression RParen statement_matched
    (15) statement_unmatched -> While . LParen expression RParen statement_unmatched

    LParen          shift and go to state 55


state 24

    (16) statement_matched -> Do . statement_matched While LParen expression RParen Semi
    (17) statement_unmatched -> Do . statement_unmatched While LParen expression RParen Semi
    (11) statement_matched -> . If LParen expression RParen statement_matched Else statement_matched
    (14) statement_matched -> . While LParen expression RParen statement_matched
    (16) statement_matched -> . Do statement_matched While LParen expression RParen Semi
    (18) statement_matched -> . For LParen expression Semi expression Semi expression RParen statement_matched
    (19) statement_matched -> . For LParen declaration Semi expression Semi expression RParen statement_matched
    (22) statement_matched -> . For LParen Semi Semi RParen statement_matched
    (24) statement_matched -> . Return expression Semi
    (25) statement_matched -> . opt_expression Semi
    (26) statement_matched -> . LBrace block RBrace
    (27) statement_matched -> . Break Semi
    (28) statement_matched -> . Continue Semi
    (29) statement_matched -> . For LParen declaration Semi expression Semi RParen statement_matched
    (12) statement_unmatched -> . If LParen expression RParen statement_matched Else statement_unmatched
    (13) statement_unmatched -> . If LParen expression RParen statement
    (15) statement_unmatched -> . While LParen expression RParen statement_unmatched
    (17) statement_unmatched -> . Do statement_unmatched While LParen expression RParen Semi
    (20) statement_unmatched -> . For LParen expression Semi expression Semi expression RParen statement_unmatched
    (21) statement_unmatched -> . For LParen declaration Semi expression Semi expression RParen statement_unmatched
    (23) statement_unmatched -> . For LParen Semi Semi RParen statement_unmatched
    (30) statement_unmatched -> . For LParen declaration Semi expression Semi RParen statement_unmatched
    (31) opt_expression -> . expression
    (32) opt_expression -> . empty
    (35) expression -> . assignment
    (1) empty -> .
    (36) assignment -> . conditional
    (52) assignment -> . Identifier Assign expression
    (37) conditional -> . logical_or
    (69) conditional -> . logical_or Question expression Colon conditional
    (38) logical_or -> . logical_and
    (53) logical_or -> . logical_or Or logical_and
    (39) logical_and -> . bit_or
    (54) logical_and -> . logical_and And bit_or
    (40) bit_or -> . xor
    (55) bit_or -> . bit_or BitOr xor
    (41) xor -> . bit_and
    (56) xor -> . xor Xor bit_and
    (42) bit_and -> . equality
    (57) bit_and -> . bit_and BitAnd equality
    (43) equality -> . relational
    (58) equality -> . equality NotEqual relational
    (59) equality -> . equality Equal relational
    (44) relational -> . additive
    (60) relational -> . relational Less additive
    (61) relational -> . relational Greater additive
    (62) relational -> . relational LessEqual additive
    (63) relational -> . relational GreaterEqual additive
    (45) additive -> . multiplicative
    (64) additive -> . additive Plus multiplicative
    (65) additive -> . additive Minus multiplicative
    (46) multiplicative -> . unary
    (66) multiplicative -> . multiplicative Mul unary
    (67) multiplicative -> . multiplicative Div unary
    (68) multiplicative -> . multiplicative Mod unary
    (47) unary -> . postfix
    (49) unary -> . Minus unary
    (50) unary -> . BitNot unary
    (51) unary -> . Not unary
    (48) postfix -> . primary
    (70) primary -> . Integer
    (71) primary -> . Identifier
    (72) primary -> . LParen expression RParen

    If              shift and go to state 22
    While           shift and go to state 23
    Do              shift and go to state 24
    For             shift and go to state 25
    Return          shift and go to state 26
    LBrace          shift and go to state 14
    Break           shift and go to state 28
    Continue        shift and go to state 29
    Semi            reduce using rule 1 (empty -> .)
    Identifier      shift and go to state 12
    Minus           shift and go to state 42
    BitNot          shift and go to state 45
    Not             shift and go to state 46
    Integer         shift and go to state 48
    LParen          shift and go to state 13

    statement_matched              shift and go to state 56
    expression                     shift and go to state 21
    statement_unmatched            shift and go to state 57
    opt_expression                 shift and go to state 27
    empty                          shift and go to state 30
    assignment                     shift and go to state 31
    conditional                    shift and go to state 32
    logical_or                     shift and go to state 33
    logical_and                    shift and go to state 34
    bit_or                         shift and go to state 35
    xor                            shift and go to state 36
    bit_and                        shift and go to state 37
    equality                       shift and go to state 38
    relational                     shift and go to state 39
    additive                       shift and go to state 40
    multiplicative                 shift and go to state 41
    unary                          shift and go to state 43
    postfix                        shift and go to state 44
    primary                        shift and go to state 47

state 25
